--- a/main-page/package.json
+++ b/main-page/package.json
@@ -9,9 +9,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
+    "es6-promise": "^4.2.6",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
     "http-errors": "~1.6.2",
+    "isomorphic-fetch": "^2.2.1",
     "morgan": "~1.9.0"
   }
 }
