--- a/main-page/package.json
+++ b/main-page/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^1.3.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "es6-promise": "^4.2.6",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.1",
     "firebase": "^6.0.4",
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
