--- a/main-page/package.json
+++ b/main-page/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "es6-promise": "^4.2.6",
