--- a/admin-page/package.json
+++ b/admin-page/package.json
@@ -6,14 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
+    "firebase-admin": "^8.0.0",
     "http-errors": "~1.6.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
