--- a/admin-page/package.json
+++ b/admin-page/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.3",
@@ -18,6 +19,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
