--- a/main-page/package.json
+++ b/main-page/package.json
@@ -11,7 +11,7 @@
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
+    "ejs": "^2.5.9",
     "es6-promise": "^4.2.6",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
