--- a/main-page/package.json
+++ b/main-page/package.json
@@ -19,8 +19,8 @@
     "firebase": "^6.0.4",
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
+    "js-alert": "^1.0.4",
     "morgan": "~1.9.0",
-    "popups": "^1.1.3",
     "request": "^2.88.0"
   }
 }
