--- a/admin-page/package.json
+++ b/admin-page/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
@@ -20,8 +21,10 @@
     "moment-timezone": "^0.5.25",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "password-validator": "^4.1.1",
     "sequelize": "^5.8.6"
   }
 }
