--- a/main-page/package.json
+++ b/main-page/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "~1.9.0",
+    "nouislider": "^13.1.5",
     "request": "^2.88.0"
   }
 }
